--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,11 @@ Requests="^2.31.0"
 web3="^6.12.0"
 python-dotenv = "^1.0.0"
 pytz = "^2023.3.post1"
-fastapi = "^0.105.0"
-uvicorn = "^0.24.0.post1"
+fastapi = "^0.109.0"
+uvicorn = "^0.27.0.post1"
 pyyaml = "^6.0.1"
+colorlog = "^6.8.2"
+
 
 
 [build-system]
