remove mongodb from project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "tokenapi"
+name = "tokentools_api"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -7,7 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pymongo="^4.6.1"
 Requests="^2.31.0"
 web3="^6.12.0"
 python-dotenv = "^1.0.0"
